force-app/main/default/objects/BIO_Source__c/BIO_Source__c.object-meta.xml
<CustomObject>
    <description>This object stores the complete list of requirement sources, which include, for example, Amadeus corporate policies and standards that are defined and maintained by the Amadeus CISO office on the corporate intranet: https://intranet.amadeus.com/kc/security/Policies/Pages/Corporate%20Policies%20and%20Standards.aspx.  Other requirement sources could be ISO controls or Privacy Policies.</description>
    <label>BIO Source</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIO Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>