force-app/main/default/objects/BIO_Source__c/fields/Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Count__c</fullName>
    <description>Total count of Assessments directly linked to this Source, or indirectly linked via a Child Source</description>
    <formula>Child_Source_Assessment_Count__c + Rollup_Assessment_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total count of Assessments directly linked to this Source, or indirectly linked via a Child Source</inlineHelpText>
    <label>Assessment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>