force-app/main/default/objects/BIO_Source__c/fields/Assessment_Scope__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Scope__c</fullName>
    <description>Used to segregate assessment requirements, requirement sources and assessment records to a defined scope (individual office, region, division, division subgroup, etc.).  For example, the first assessment will be for Hospitality S&amp;C/SO.  Later assessments may be done for Hospitality PMS and Hospitality TravelClick.</description>
    <inlineHelpText>Scope of the assessment this requirement source is related to</inlineHelpText>
    <label>Assessment Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BIO_Assessment_Scope</valueSetName>
    </valueSet>
</CustomField>