force-app/main/default/objects/BIO_Source__c/fields/Assessment_Sum__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Sum__c</fullName>
    <description>Total sum of Assessment scores directly linked to this Source, or indirectly linked via a Child Source</description>
    <formula>Child_Source_Assessment_Sum__c + Rollup_Assessment_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total sum of Assessment scores directly linked to this Source, or indirectly linked via a Child Source</inlineHelpText>
    <label>Assessment Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>