force-app/main/default/objects/BIO_Source__c/fields/Assumption__c.field-meta.xml
<CustomField>
    <fullName>Assumption__c</fullName>
    <description>NICC-035711.  Implemented to support “CS1.5: Corporate Security KPIs”</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Basis for the validity of the KPI</inlineHelpText>
    <label>Assumption</label>
    <type>TextArea</type>
</CustomField>