force-app/main/default/objects/BIO_Source__c/fields/Child_Source_Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Source_Assessment_Count__c</fullName>
    <description>Sum of all &quot;Assessment Count&quot; values from all Child Source records (records that list this record as the &quot;Master Source&quot; or &quot;Policy&quot;)</description>
    <inlineHelpText>Sum of all &quot;Assessment Count&quot; values from all Child Source records</inlineHelpText>
    <label>Child Source Assessment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>