force-app/main/default/objects/BIO_Source__c/fields/Current_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Risk_Level__c</fullName>
    <description>Risk Register field. NICC-033571</description>
    <formula>IF ( Current_Risk_Value__c &gt;= 20, &quot;Very High&quot;, 
IF ( Current_Risk_Value__c &gt;= 12, &quot;High&quot;, 
IF ( Current_Risk_Value__c &gt;= 6, &quot;Medium&quot;, 
IF ( Current_Risk_Value__c &gt;= 3, &quot;Low&quot;, 
IF ( Current_Risk_Value__c &gt;= 1, &quot;Very Low&quot;, 
IF ( Current_Risk_Value__c = 0, &quot;N/A&quot;, &quot;TBD&quot; ) 
) ) ) ) )</formula>
    <inlineHelpText>Current risk assessment</inlineHelpText>
    <label>Current Risk Level</label>
    <type>Text</type>
</CustomField>