force-app/main/default/objects/BIO_Source__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Risk Register field  NICC-035711</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Root cause of a breach of information security such as unauthorized access, use or disclosure, a loss or a system or process failure.</inlineHelpText>
    <label>Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>