force-app/main/default/objects/BIO_Source__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>NICC-035711  Implemented to support “CS1.5: Corporate Security KPIs”, but “Frequency” is generic so it can be used for other purposes as needed.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>