force-app/main/default/objects/BIO_Source__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>NICC-035711 Implemented to support “CS1.5: Corporate Security KPIs”, but “Id” is generic so it can be used for other purposes as needed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ID</label>
    <type>TextArea</type>
</CustomField>