force-app/main/default/objects/BIO_Source__c/fields/Implemented_Controls__c.field-meta.xml
<CustomField>
    <fullName>Implemented_Controls__c</fullName>
    <description>Risk Register field  NICC-035711</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mitigation controls currently in place</inlineHelpText>
    <label>Implemented Controls</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>