force-app/main/default/objects/BIO_Source__c/fields/Inherent_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Inherent_Risk_Level__c</fullName>
    <description>Verbal translation of the Risk Value  NICC-035711</description>
    <formula>IF ( Inherent_Risk_Value__c &gt;= 20, &quot;Very High&quot;, 
IF ( Inherent_Risk_Value__c &gt;= 12, &quot;High&quot;, 
IF ( Inherent_Risk_Value__c &gt;= 6, &quot;Medium&quot;, 
IF ( Inherent_Risk_Value__c &gt;= 3, &quot;Low&quot;, 
IF ( Inherent_Risk_Value__c &gt;= 1, &quot;Very Low&quot;, 
IF ( Inherent_Risk_Value__c = 0, &quot;N/A&quot;, &quot;TBD&quot; ) 
) ) ) ) )</formula>
    <inlineHelpText>Overall Asset Risk Assessment (highest risk level of all related Assessments)</inlineHelpText>
    <label>Inherent Risk Level</label>
    <type>Text</type>
</CustomField>