force-app/main/default/objects/BIO_Source__c/fields/ISMS_Area__c.field-meta.xml
<CustomField>
    <fullName>ISMS_Area__c</fullName>
    <description>NICC-035711  Implemented to support “CS1.5: Corporate Security KPIs”</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ISMS process category</inlineHelpText>
    <label>ISMS Area</label>
    <type>TextArea</type>
</CustomField>