force-app/main/default/objects/BIO_Source__c/fields/Master_Source__c.field-meta.xml
<CustomField>
    <fullName>Master_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field was introduced to allow for rolling up Score values from a Child Source (Record Type = Corporate Security Standard) to a Master Source (Record Type = Corporate Security Policy).  The Field Name was made generic just in case future scenarios arise for the use of this field where the specific &quot;Policy&quot; API Name would make no sense.</description>
    <inlineHelpText>The Security Policy that this Security Standard is related to</inlineHelpText>
    <label>Policy</label>
    <referenceTo>BIO_Source__c</referenceTo>
    <relationshipLabel>Security Standards</relationshipLabel>
    <relationshipName>Security_Standards</relationshipName>
    <type>Lookup</type>
</CustomField>