force-app/main/default/objects/BIO_Source__c/fields/Residual_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Residual_Risk_Level__c</fullName>
    <businessOwnerUser>ssavage@newmarketinc.com.sbfull</businessOwnerUser>
    <description>Risk Register field</description>
    <formula>IF (Residual_Risk_Value__c &gt;= 20, &quot;Very High&quot;, 
IF (Residual_Risk_Value__c &gt;= 12, &quot;High&quot;, 
IF (Residual_Risk_Value__c &gt;= 6, &quot;Medium&quot;, 
IF (Residual_Risk_Value__c &gt;= 3, &quot;Low&quot;, 
IF (Residual_Risk_Value__c &gt;= 1, &quot;Very Low&quot;, 
IF (Residual_Risk_Value__c = 0, &quot;N/A&quot;, &quot;TBD&quot; ) 
) ) ) ) )</formula>
    <inlineHelpText>Residual risk assessment</inlineHelpText>
    <label>Residual Risk Level</label>
    <type>Text</type>
</CustomField>