force-app/main/default/objects/BIO_Source__c/fields/Risk_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Treatment__c</fullName>
    <businessOwnerUser>ssavage@newmarketinc.com.sbfull</businessOwnerUser>
    <description>Risk Register field</description>
    <inlineHelpText>Retention (acceptance of potential burden/loss)
Avoidance (do not become involved with, or withdraw from, the risk scenario)
Modification (implement risk mitigation to reduce the risk)
Sharing (share the potential burden/loss with another party)</inlineHelpText>
    <label>Risk Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Avoidance</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>