force-app/main/default/objects/BIO_Source__c/fields/Rollup_Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Assessment_Count__c</fullName>
    <description>Count of all Assessment records related to this Source (marked as applicable and with a score greater than -1).</description>
    <inlineHelpText>Count of all completed, applicable assessments linked to this Source</inlineHelpText>
    <label>Rollup Assessment Count</label>
    <summaryFilterItems>
        <field>AH_BIO_Assessment__c.Applicable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AH_BIO_Assessment__c.Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>AH_BIO_Assessment__c.Source__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>