force-app/main/default/objects/BIO_Source__c/fields/Rollup_Assessment_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Assessment_Sum__c</fullName>
    <description>Sum of all Assessment scores related to this Source (where the assessment is marked as applicable and with a score greater than -1).</description>
    <inlineHelpText>Sum of all completed, applicable assessment scores related to this Source</inlineHelpText>
    <label>Rollup Assessment Sum</label>
    <summarizedField>AH_BIO_Assessment__c.Score__c</summarizedField>
    <summaryFilterItems>
        <field>AH_BIO_Assessment__c.Score__c</field>
        <operation>greaterThan</operation>
        <value>-1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AH_BIO_Assessment__c.Applicable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AH_BIO_Assessment__c.Source__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>