force-app/main/default/objects/BIO_Source__c/fields/Vulnerabilities__c.field-meta.xml
<CustomField>
    <fullName>Vulnerabilities__c</fullName>
    <businessOwnerUser>ssavage@newmarketinc.com</businessOwnerUser>
    <description>Risk Register field</description>
    <inlineHelpText>Applicable Vulnerabilities (source: CS1.3 Annex F)</inlineHelpText>
    <label>Vulnerabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V1. Defective Hardware/software</fullName>
            </value>
            <value>
                <fullName>V2. Bad configuration</fullName>
            </value>
            <value>
                <fullName>V3. Inadequate compliance enforcement</fullName>
            </value>
            <value>
                <fullName>V4. Poor (network) design</fullName>
            </value>
            <value>
                <fullName>V5. Defective process</fullName>
            </value>
            <value>
                <fullName>V6. Inadequate governance or management</fullName>
            </value>
            <value>
                <fullName>V7. Insufficient staff</fullName>
            </value>
            <value>
                <fullName>V8. Lack of knowledge of support users or operations</fullName>
            </value>
            <value>
                <fullName>V9. Lack of security functionalities</fullName>
            </value>
            <value>
                <fullName>V10. Lack of proper maintenance</fullName>
            </value>
            <value>
                <fullName>V11. Bad passwords</fullName>
            </value>
            <value>
                <fullName>V12. Unprotected communications</fullName>
            </value>
            <value>
                <fullName>V13. Lack of redundancy</fullName>
            </value>
            <value>
                <fullName>V14. Poor management of communications</fullName>
            </value>
            <value>
                <fullName>V15. Unprotected assets</fullName>
            </value>
            <value>
                <fullName>V16. Complicated user interface</fullName>
            </value>
            <value>
                <fullName>V17. Default passwords not changed</fullName>
            </value>
            <value>
                <fullName>V18. Disposal of storage media without deleting data</fullName>
            </value>
            <value>
                <fullName>V19. Inadequate capacity management</fullName>
            </value>
            <value>
                <fullName>V20. Inadequate change management</fullName>
            </value>
            <value>
                <fullName>V21. Inadequate classification of information</fullName>
            </value>
            <value>
                <fullName>V22. Inadequate control of physical access</fullName>
            </value>
            <value>
                <fullName>V23. Inadequate network management</fullName>
            </value>
            <value>
                <fullName>V24. Inadequate or irregular backup</fullName>
            </value>
            <value>
                <fullName>V25. Inadequate password management</fullName>
            </value>
            <value>
                <fullName>V26. Inadequate protection of cryptographic keys</fullName>
            </value>
            <value>
                <fullName>V27. Inadequate security awareness</fullName>
            </value>
            <value>
                <fullName>V28. Inadequate segregation of duties</fullName>
            </value>
            <value>
                <fullName>V29. Inadequate segregation of operational and testing facilities</fullName>
            </value>
            <value>
                <fullName>V30. Inadequate supervision of employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>