force-app/main/default/objects/BIO_Source__c/recordTypes/KPI.recordType-meta.xml
<RecordType>
    <fullName>KPI</fullName>
    <active>true</active>
    <description>Key Performance Indicators defined by the Amadeus Corporate Information Security Office</description>
    <label>KPI</label>
</RecordType>