force-app/main/default/objects/BIO_Source__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>Assets are assessed during the Risk Assessment phase of the Risk Management Program</description>
    <label>Risk</label>
</RecordType>