force-app/main/default/objects/BIO_Source__c/recordTypes/Security_Policy.recordType-meta.xml
<RecordType>
    <fullName>Security_Policy</fullName>
    <active>true</active>
    <description>Corporate Security Policies</description>
    <label>Security Policy</label>
</RecordType>