force-app/main/default/objects/BIO_Source__c/recordTypes/Security_Standard.recordType-meta.xml
<RecordType>
    <fullName>Security_Standard</fullName>
    <active>true</active>
    <description>Corporate Security Standards</description>
    <label>Security Standard</label>
</RecordType>