force-app/main/default/objects/BIO_Source__c/listViews/Assets.listView-meta.xml
<ListView>
    <fullName>Assets</fullName>
    <columns>NAME</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BIO_Source__c.Risk</value>
    </filters>
    <label>Risk Register</label>
</ListView>