force-app/main/default/objects/BIO_Source__c/listViews/Corporate_Security_Policies.listView-meta.xml
<ListView>
    <fullName>Corporate_Security_Policies</fullName>
    <columns>NAME</columns>
    <columns>Assessment__c</columns>
    <columns>Assessment_Count__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>PL</value>
    </filters>
    <label>Corporate Security Policies</label>
</ListView>