force-app/main/default/objects/BIO_Source__c/listViews/Corporate_Security_Standards.listView-meta.xml
<ListView>
    <fullName>Corporate_Security_Standards</fullName>
    <columns>NAME</columns>
    <columns>Assessment__c</columns>
    <columns>Master_Source__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BIO_Source__c.Security_Standard</value>
    </filters>
    <label>Corporate Security Standards</label>
</ListView>